// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should load the stored bookmark from local storage and present it visibly within the list 1`] = `
<ul
  aria-label="bookmark.list.label"
  class="spatial-bookmark-list chakra-list__root css-1q4ghp7"
  role="listbox"
>
  <li
    class="spatial-bookmarks-item chakra-list__item css-843j6g"
    role="option"
    tabindex="0"
  >
    <div
      class="css-v3qtod"
    >
      <div
        class="css-d82rsv"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M228.92,49.69a8,8,0,0,0-6.86-1.45L160.93,63.52,99.58,32.84a8,8,0,0,0-5.52-.6l-64,16A8,8,0,0,0,24,56V200a8,8,0,0,0,9.94,7.76l61.13-15.28,61.35,30.68A8.15,8.15,0,0,0,160,224a8,8,0,0,0,1.94-.24l64-16A8,8,0,0,0,232,200V56A8,8,0,0,0,228.92,49.69ZM104,52.94l48,24V203.06l-48-24ZM40,62.25l48-12v127.5l-48,12Zm176,131.5-48,12V78.25l48-12Z"
          />
        </svg>
      </div>
      <p
        class="css-29in21"
      >
        Test
      </p>
      <div
        class="css-xsawf1"
      />
      <button
        aria-label="bookmark.button.deleteOne"
        class="chakra-button chakra-tooltip__trigger spatial-bookmarks-item-delete css-1qwewjl"
        data-part="trigger"
        data-scope="tooltip"
        data-state="closed"
        dir="ltr"
        id="tooltip:«r0»:trigger"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M216,50H40a6,6,0,0,0,0,12H50V208a14,14,0,0,0,14,14H192a14,14,0,0,0,14-14V62h10a6,6,0,0,0,0-12ZM194,208a2,2,0,0,1-2,2H64a2,2,0,0,1-2-2V62H194ZM82,24a6,6,0,0,1,6-6h80a6,6,0,0,1,0,12H88A6,6,0,0,1,82,24Z"
          />
        </svg>
      </button>
    </div>
  </li>
</ul>
`;

exports[`should only delete all bookmarks after the user confirms the action. 1`] = `
<div
  class="chakra-alert__root css-jwwdmt"
  role="alert"
>
  <span
    class="css-13gnd3a"
  >
    <svg
      class="css-126y6n1"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11 15H13V17H11V15ZM11 7H13V13H11V7Z"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-1jeznpc"
  >
    bookmark.alert.delete
  </div>
</div>
`;

exports[`should only delete all bookmarks after the user confirms the action. 2`] = `
<div
  class="chakra-alert__title css-1jeznpc"
>
  bookmark.alert.noSaved
</div>
`;

exports[`should remove bookmark from the list by clicking the remove button 1`] = `
<div
  class="chakra-alert__title css-1jeznpc"
>
  bookmark.alert.noSaved
</div>
`;

exports[`should shown an alert message if no bookmarks are saved 1`] = `
<div
  class="chakra-alert__root css-1owmyes"
  role="alert"
>
  <span
    class="css-13gnd3a"
  >
    <svg
      class="css-1g7m1fs"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM11 7H13V9H11V7ZM11 11H13V17H11V11Z"
      />
    </svg>
  </span>
  <div
    class="chakra-alert__title css-1jeznpc"
  >
    bookmark.alert.noSaved
  </div>
</div>
`;
